# django-snacks

./: db.sqlite3  pyproject.toml
django_snacks_project/: settings.py  urls.py
snacks/: urls.py
templates/: home.html
