[tool.poetry]
name = "django-snacks"
version = "0.1.0"
description = ""
authors = ["Klace Koch <koch.klace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
